AUTHORS: Added list of translators.

--- a/trunk/src/AUTHORS
+++ b/trunk/src/AUTHORS
@@ -1,2 +1,9 @@
+Developer(s):
 Priyank Gosalia <priyankmg@gmail.com> (Main Developer)
-Alex Smith <alex@alex-smith.me.uk> (Autoconf support)
+
+Autoconf support:
+Alex Smith <alex@alex-smith.me.uk>
+
+Translators:
+Cheng-Wei Chien <e.cwchien@gmail.com> Traditional Chinese (zh_TW)
+
