Changelog: Added release data for version 0.4.0

--- a/tags/gimmix-0.4.0/Changelog
+++ b/tags/gimmix-0.4.0/Changelog
@@ -1,4 +1,4 @@
-Version 0.4.0 (xx-xx-2007)
+Version 0.4.0 (23-02-2007)
 * Brand new interface. Gimmix is much more cleaner than before and the
 ui is a lot more compact.
 * Revamped the first run dialog.
