--- a/trunk/src/Changelog
+++ b/trunk/src/Changelog
@@ -1,4 +1,4 @@
-Version 0.4.0 (xx-xx-2007)
+Version 0.4.0 (23-02-2007)
 * Brand new interface. Gimmix is much more cleaner than before and the
 ui is a lot more compact.
 * Revamped the first run dialog.
