AUTHORS: Added Yavuz Selim Burgu to the list of translators.

--- a/trunk/src/AUTHORS
+++ b/trunk/src/AUTHORS
@@ -5,5 +5,6 @@ Autoconf support:
 Alex Smith <alex@alex-smith.me.uk>
 
 Translators:
-Cheng-Wei Chien <e.cwchien@gmail.com> Traditional Chinese (zh_TW)
+Cheng-Wei Chien <e.cwchien@gmail.com>		Traditional Chinese (zh_TW)
+Yavuz Selim Burgu <turkalinux@gmail.com>	Turkish (tr)
 
