* Added german translation * updated AUTHORS

--- a/trunk/src/AUTHORS
+++ b/trunk/src/AUTHORS
@@ -1,5 +1,5 @@
 Developer(s):
-Priyank Gosalia <priyankmg@gmail.com> (Main Developer)
+Priyank Gosalia <priyankmg@gmail.com>
 
 Autoconf support:
 Alex Smith <alex@alex-smith.me.uk>
@@ -7,4 +7,5 @@ Alex Smith <alex@alex-smith.me.uk>
 Translators:
 Cheng-Wei Chien <e.cwchien@gmail.com>		Traditional Chinese (zh_TW)
 Yavuz Selim Burgu <turkalinux@gmail.com>	Turkish (tr)
+Martin Stromberger <mstromberger@aom.at>	Deutsch (de)
 
