--- a/trunk/src/ChangeLog
+++ b/trunk/src/ChangeLog
@@ -6,6 +6,8 @@ Version 0.4.4 (xx-xx-2008)
   information of a song.
 * Added support for command-line arguments using getopt. (currently only --version)
 * Added German translation (Thanks to Martin Stromberger)
+* Gimmix now includes a Lyrics fetcher plugin
+* Some user interface enhancements
 
 Version 0.4.3 (2-2-2008)
 * Bug #14583: Set the default permission of .gimmixrc to 600
