--- a/trunk/src/ChangeLog
+++ b/trunk/src/ChangeLog
@@ -6,7 +6,8 @@ Version 0.5.0 (xx-xx-2008)
   information of a song.
 * Added support for command-line arguments using getopt. (currently only --version)
 * Added German translation (Thanks to Martin Stromberger)
-* Gimmix now includes a Lyrics fetcher plugin
+* Added support for fetching Lyrics from Leoslyrics.com
+* Added support for fetching Album cover art from Amazon.com
 * Some user interface enhancements
 
 Version 0.4.3 (2-2-2008)
