--- a/trunk/src/ChangeLog
+++ b/trunk/src/ChangeLog
@@ -1,4 +1,4 @@
-Version 0.5.0 (xx-xx-2008)
+Version 0.5.0 (26-09-2008) Happy 2nd Birthday GIMMIX! \o/
 * Bug #234739: Progress bar shows garbage next to time (in case of songs of length over 99 minutes)
 * Bug #253140: Gimmix sometimes displays "assertion `percentage >= 0 && percentage <= 1.0' failed"
 * Bug #263975: Window becomes too large if the song title is very long. This bug also fixes an issue
@@ -8,6 +8,7 @@ Version 0.5.0 (xx-xx-2008)
 * Added German translation (Thanks to Martin Stromberger)
 * Added support for fetching Lyrics from Leoslyrics.com
 * Added support for fetching Album cover art from Amazon.com
+* Added support for changing audio output device in Preferences
 * Some user interface enhancements
 
 Version 0.4.3 (2-2-2008)
