--- a/trunk/src/ChangeLog
+++ b/trunk/src/ChangeLog
@@ -1,3 +1,9 @@
+Version 0.5.3 (xx-12-2008)
+* Bug #293908: Segfaults when disabling coverart plugin
+* Bug #305662: Segfault with accents and long filename
+* Added support for connection through proxy servers
+* Fixed random crashes because of cover and lyrics plugins
+
 Version 0.5.2 (11-10-2008)
 * Improved connection handling and fixed almost all crashes
 * Fix random crashes occurring because of cover and lyrics plugins
