* Added Vincent Legout to AUTHORS * Update release date in Changelog == Gimmix 0.5.3 is out ==

--- a/trunk/src/AUTHORS
+++ b/trunk/src/AUTHORS
@@ -4,6 +4,9 @@ Priyank Gosalia <priyankmg@gmail.com>
 Autoconf support:
 Alex Smith <alex@alex-smith.me.uk>
 
+Manual page:
+Vincent Legout <vincent@legout.info>
+
 Translators:
 Cheng-Wei Chien <e.cwchien@gmail.com>		Traditional Chinese (zh_TW)
 Yavuz Selim Burgu <turkalinux@gmail.com>	Turkish (tr)
