--- a/trunk/src/ChangeLog
+++ b/trunk/src/ChangeLog
@@ -1,5 +1,8 @@
 Note: Dates are in dd-mm-yyyy format
 
+Version 0.5.4 (xx-xx-xxxx)
+* Bug #307527: Fix missing prototypes in some headers (patch from Christoph Mende)
+
 Version 0.5.3 (12-12-2008)
 * Bug #293908: Segfaults when disabling coverart plugin
 * Bug #305662: Segfault with accents and long filename
