--- a/trunk/src/ChangeLog
+++ b/trunk/src/ChangeLog
@@ -1,7 +1,8 @@
 Note: Dates are in dd-mm-yyyy format
 
 Version 0.5.6 (xx-02-2009)
-* Fixed lots of crashes due to cover/lyrics plugins.
+* Gimmix requires libmpd version to be atleast 0.17.0 or higher
+* Fixed lots of crashes/lockups due to cover/lyrics plugins.
 * Tag editing support is now optional.
 * Revamped tag editor and now it also shows album cover.
 * Speed improvements and fixed some memory leaks.
