--- a/trunk/src/AUTHORS
+++ b/trunk/src/AUTHORS
@@ -11,4 +11,6 @@ Translators:
 Cheng-Wei Chien <e.cwchien@gmail.com>		Traditional Chinese (zh_TW)
 Yavuz Selim Burgu <turkalinux@gmail.com>	Turkish (tr)
 Martin Stromberger <mstromberger@aom.at>	Deutsch (de)
+Niklas Grahn <terra.unknown@yahoo.com>		Swedish (sv)
+
 
