--- a/trunk/src/TODO
+++ b/trunk/src/TODO
@@ -1,1 +1,5 @@
 * Support markup for current playlist.
+* On closing gimmix, it should check if tray icon is visible, if not,
+  then gimmix should quit. [suggested by qball]
+* Add an option to quit gimmix (Ctrl Q) [suggested by qball]
+
