* French translation (Thanks to Alois Halel)

--- a/trunk/src/AUTHORS
+++ b/trunk/src/AUTHORS
@@ -12,5 +12,6 @@ Cheng-Wei Chien <e.cwchien@gmail.com>		Traditional Chinese (zh_TW)
 Yavuz Selim Burgu <turkalinux@gmail.com>	Turkish (tr)
 Martin Stromberger <mstromberger@aom.at>	Deutsch (de)
 Niklas Grahn <terra.unknown@yahoo.com>		Swedish (sv)
+AloïHalel <alois.halel@gmail.co>			French (fr)
 
 
