--- a/trunk/src/README
+++ b/trunk/src/README
@@ -11,7 +11,7 @@ Features:
 * Library search. (search by artist, album, filename, etc)
 * Playlist management (manage mpd playlists)
 * ID3v2 tag editing support.
-* Support for fetching Covers from Amazon
+* Support for fetching Covers from Freecovers.net
 * Support for fetching Lyrics from Leoslyrics.com
 * System tray icon support.
 * Support for controlling Gimmix through Keyboard.
