--- a/trunk/src/ChangeLog
+++ b/trunk/src/ChangeLog
@@ -1,5 +1,9 @@
 Note: Dates are in dd-mm-yyyy format
 
+Version 0.5.7.1 (November 22, 2009)
+* New translation French (fr_FR). Thanks to Alois Halel.
+* Applied a patch from Vincent Legout to make gimmix link against libx11. 
+
 Version 0.5.7 (November 14, 2009) Yeah, It's been a looong time! 
 * New Cover art provider (Freecovers.net)
 * Fix issues with the ID3 Tag Editor (Gentoo bug #264231)
